--- a/style.css
+++ b/style.css
@@ -54,3 +54,23 @@ body {
 #chaos-btn:hover {
     background-color: #ff1a1a;
 }
+
+.music-control {
+    margin: 20px auto;
+    text-align: center;
+}
+
+.music-control button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 1em;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.music-control button:hover {
+    background-color: #555;
+}
