--- a/style.css
+++ b/style.css
@@ -7,23 +7,24 @@ body {
 }
 
 .banner-container img {
-    width: 70%; /* Réduction de la taille à 70% */
+    width: 70%;
     max-height: 300px;
-    object-fit: contain; /* Empêcher les coupures */
+    object-fit: contain;
     margin: 10px auto;
 }
 
 .diceman-container img {
-    width: 50%; /* Réduction de la taille à 50% */
+    width: 50%;
     max-height: 400px;
     object-fit: contain;
     margin: 20px auto;
 }
 
-.phrase-container {
+.phrase-container p {
     margin: 20px auto;
     font-size: 1.5em;
     font-style: italic;
+    font-weight: bold; /* Texte en gras */
 }
 
 .choices-container {
@@ -48,9 +49,9 @@ body {
     background-color: #ff4d4d;
     color: white;
     border: none;
-    font-size: 1.5em;
-    padding: 20px 40px;
-    border-radius: 5px;
+    font-size: 2.5em;
+    padding: 30px 60px;
+    border-radius: 10px;
     cursor: pointer;
 }
 
@@ -59,16 +60,17 @@ body {
 }
 
 .music-control {
-    margin: 20px auto;
-    text-align: center;
+    text-align: left;
+    margin-left: 10%;
+    display: inline-block;
 }
 
 .music-control button {
     background-color: #333;
     color: #fff;
     border: none;
-    padding: 10px 20px;
-    font-size: 1em;
+    padding: 15px 30px;
+    font-size: 1.2em;
     margin: 5px;
     border-radius: 5px;
     cursor: pointer;
