--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ body {
 }
 
 .banner-container img {
-    width: 90%;
+    width: 120%;
+    height: auto;
     max-height: 300px;
     object-fit: contain;
     margin: 10px auto;
