--- a/style.css
+++ b/style.css
@@ -51,13 +51,14 @@ body {
     margin: 20px auto;
 }
 
-/* Phrase */
+/* Phrase accroche*/
 .phrase-container p {
     margin: 20px auto;
     font-size: 1.5em;
     font-style: italic;
     font-weight: bold;
     color: #555;
+    margin-bottom: 20px;
 }
 
 /* Choices */
@@ -253,5 +254,5 @@ h1 {
     text-align: center; /* Centré */
     color: #444;  /* Gris foncé pour ne pas être trop agressif */
     margin-top: -10px; /* Rapprocher du DiceMan */
-    margin-bottom: 10px; /* Ajouter un léger espace avant la phrase aléatoire */
+    margin-bottom: 20px; /* Ajouter un léger espace avant la phrase aléatoire */
 }
